--- a/users.yaml
+++ b/users.yaml
@@ -3,7 +3,7 @@ USERS:
       white_uid: 1147729340, 1773661633, 385661116, 3494357371980734 # 白名单用户ID, 可以是多个用户ID, 以逗号分隔,填写后只会打卡这些用户,黑名单失效，不用就填0
       banned_uid: 0 # 黑名单UID 同上,填了后将不会打卡，点赞，分享 用英文逗号分隔 不填则不限制,两个都填0则不限制,打卡所有直播间
     - access_key: e862aec98323f5e3abe38d797c627242
-      white_uid: 1773661633
+      white_uid: 1773661633, 3494354282875438, 626710147, 3546821494311413, 3546753720650054, 7706705, 382877011, 34582979, 3546716517173570, 3546674901289282, 697737710
       banned_uid: 0
     # 注意对齐
     # 多用户以上格式添加
