--- a/users.yaml
+++ b/users.yaml
@@ -12,7 +12,7 @@ CRON: # 0 0 * * *
 # 例如每天凌晨0点0分执行一次为 0 0 * * *
 # 如果不填,则不使用内置定时器,填写正确后要保持该进程一直运行
 
-SENDKEY: # Server酱微信推送 可选 获取地址：https://sct.ftqq.com/
+SENDKEY: SCT310959TTxJFJa3fFxtDHZxjuEX8cmfT # Server酱微信推送 可选 获取地址：https://sct.ftqq.com/
 MOREPUSH: # 更多种类的推送 详细配置见文档
 
 PROXY: # 推送代理地址,如：http://1.2.3.4:5678 支持 http/socks4/socks5 不支持 https 不用代理的不用填
