--- a/.github/workflows/fans.yml
+++ b/.github/workflows/fans.yml
@@ -3,8 +3,8 @@ on:
   # 开启手动执行，提供调试
   workflow_dispatch:
   schedule:
-    # 每日运行的时间，注意这里是零时区，北京时间需要时区换算，默认是凌晨1点
-    - cron: "0 17 * * *"
+    # 每日运行的时间，注意这里是零时区，北京时间需要时区换算，默认是凌晨3点
+    - cron: 0 19 * * *
 jobs:
   build:
     runs-on: ubuntu-latest
