--- a/users.yaml
+++ b/users.yaml
@@ -1,6 +1,6 @@
 USERS:
     - access_key: 82369fbfb9679ec065899aa584437a12 # 注意冒号后的空格 否则会读取失败 英文冒号
-      white_uid: 183609303, 599283994, 1500360158, 215141494, 358005247, 3691004123154930, 259951212, 284199398, 457258275, 3546744717576534 # 白名单用户ID, 可以是多个用户ID, 以逗号分隔,填写后只会打卡这些用户,黑名单失效，不用就填0
+      white_uid: 183609303, 599283994, 1500360158, 215141494, 358005247, 3691004123154930, 259951212, 284199398, 457258275, 3546744717576534, 599283994 # 白名单用户ID, 可以是多个用户ID, 以逗号分隔,填写后只会打卡这些用户,黑名单失效，不用就填0
       banned_uid: 0 # 黑名单UID 同上,填了后将不会打卡，点赞，分享 用英文逗号分隔 不填则不限制,两个都填0则不限制,打卡所有直播间
     # 注意对齐
     # 多用户以上格式添加
